<resources>
    <string name="app_name">Speedometer Ultra</string>

    <string name="title_section1">Speed</string>
    <string name="title_section2">Zero to Sixty</string>
    <string name="title_section3">Useful Information</string>


    <string name="currentSpeed">History</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example"></string>
    <string name="action_settings"></string>
    <string name="ImpInfo">Important Information</string>


    <string name="Information">This app requires location services to be enabled for proper functionality.</string>
    <string name="Information1">This app updates location constantly to provide the most accurate possible GPS based speed results.</string>
    <string name="Information2">This constant work can drain the battery quickly, so it is recommended to completely close the app or disable location services when it is not in use.</string>
    <string name="Information3">The violation of the law is not condoned or encouraged, which probably means you should not use this app while you are driving.</string>



    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="pref_sms_storage_title">Settings</string>
    <string name="pref_summary_auto_delete">Use KPH as the default unit of speed</string>
    <string name="pref_title_auto_delete">Kilometers per Hour</string>


</resources>
