<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_sms_storage_title"
        android:key="pref_key_storage_settings">

        <SwitchPreference
            android:key="switch_pref_KPH"
            android:summary="@string/pref_summary_auto_delete"
            android:title="@string/pref_title_auto_delete"
            android:defaultValue="false" />
        </PreferenceCategory>
    <SwitchPreference
        android:defaultValue="false"
        android:title="Mirrored Text Mode"
        android:summary="Enable for HUD/windshield use"
        android:key="switch_pref_Mirrored" />
    <ListPreference
        android:key="list_pref_color"
        android:title="Text Color"
        android:entries="@array/Colors"
        android:summary="Choose a text color for the app"
        android:entryValues="@array/ColorsAlias"/>
</PreferenceScreen>