<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ImpInfo"
        android:id="@+id/textView2"
        android:layout_gravity="center"
        android:textColor="#32cd32"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Information"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:paddingTop="80px"
        android:textColor="#32cd32"
        android:paddingLeft="50px"
        android:paddingRight="50px"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Information1"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:textColor="#32cd32"
        android:paddingLeft="50px"
        android:paddingRight="50px"
        android:paddingTop="75px"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Information2"
        android:id="@+id/textView6"
        android:layout_gravity="center_horizontal"
        android:textColor="#32cd32"
        android:paddingLeft="50px"
        android:paddingRight="50px"
        android:paddingTop="75px"
        android:paddingBottom="75px"/>

</LinearLayout>